# auto_pkg

./: README.md  package.xml  setup.cfg  setup.py
auto_pkg/: auto.py
launch/: auto_pkg_launch_file.launch.py
maps/: map.pgm  map.yaml
